--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,6 +529,7 @@ body.modal-open .mm-slideout {
   font-weight: 300;
   padding: 14px 40px;
   border-radius: 45px;
+  display: inline-block;
 }
 .custom_header .header_links .header_links_demo {
   background-color: #1429a6;
@@ -565,6 +566,10 @@ body.modal-open .mm-slideout {
   top: 50%;
   transform: translate(0, -50%);
 }
+.custom_header .header_img_on_mobile {
+  display: none;
+}
+
 .our_services {
   padding: 80px 0 120px 0;
   background-color: #0c0b68;
@@ -579,8 +584,9 @@ body.modal-open .mm-slideout {
 .our_services .top_section_parent_img {
   position: absolute;
   left: 50%;
-  top: -70%;
-  transform: translate(-50%, 0);
+  top: 50%;
+  transform: translate(-50%, -70%);
+  opacity: 0.3;
 }
 .our_services .section_header {
   text-align: center;
@@ -634,7 +640,12 @@ body.modal-open .mm-slideout {
   transform: translate(-50%, 0);
   z-index: 4;
   border: 1px solid #fff;
+  transition: all 0.3s ease-in-out;
 }
+.our_services_card:hover .card_icon {
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(83, 144, 217, 0.64));
+}
+
 .pixel_by_pixel {
   background-color: #111163;
   padding: 70px 0;
@@ -668,6 +679,9 @@ body.modal-open .mm-slideout {
   font-size: 1.3rem;
   margin-left: 10px;
   font-weight: 300;
+}
+.pixel_by_pixel .accordion-item .accordion-button::after {
+  filter: invert(1) grayscale(1);
 }
 .pixel_by_pixel .accordion-item .number {
   width: 40px;
@@ -754,6 +768,8 @@ body.modal-open .mm-slideout {
 }
 .why_choose_sekurd .section_header {
   margin-bottom: 60px;
+  position: relative;
+  z-index: 3;
 }
 .why_choose_sekurd .section_header h5 {
   font-size: 2.4rem;
@@ -764,6 +780,8 @@ body.modal-open .mm-slideout {
 .why_choose_sekurd_card {
   align-items: flex-start;
   margin-bottom: 60px;
+  position: relative;
+  z-index: 3;
 }
 .why_choose_sekurd_card .card_icon {
   display: inline-flex;
@@ -835,6 +853,7 @@ body.modal-open .mm-slideout {
   background-color: #111163;
   position: relative;
   padding: 80px 0;
+  overflow: hidden;
 }
 .industries .container-fluid {
   padding-right: 0;
@@ -845,6 +864,7 @@ body.modal-open .mm-slideout {
 }
 .industries .wrapper .frame {
   position: absolute;
+  display: none;
   top: 50%;
   transform: translate(0, -50%);
   left: 0;
@@ -891,17 +911,29 @@ body.modal-open .mm-slideout {
 .industries ul li:hover::after {
   width: 100px;
 }
+.industries ul li.dotactive::after {
+  width: 100px;
+}
 .industries .swiper {
   margin: 100px 0;
-  width: 850px;
-  height: 600px;
   margin-left: auto;
+  width: 850px;
   overflow: visible;
   /* Allow visibility outside the container */
 }
 .industries .swiper .card_img {
   position: relative;
+  height: 600px;
   width: 100%;
+}
+.industries .swiper .card_img .line {
+  position: absolute;
+  top: 0;
+  left: 40px;
+  z-index: 3;
+}
+.industries .swiper .card_img .line img {
+  height: 480px;
 }
 .industries .swiper .card_img .card_content {
   position: absolute;
@@ -909,20 +941,25 @@ body.modal-open .mm-slideout {
   left: 0;
   z-index: 8;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-end;
   height: 100%;
+  padding: 40px;
+  padding-left: 80px;
   width: 100%;
   background-color: rgba(12, 12, 104, 0.5);
   z-index: 4;
 }
 .industries .swiper .card_img .card_content h5 {
   color: #fff;
-  font-weight: 500;
-  font-size: 1.2rem;
+  font-weight: 600;
+  font-size: 2rem;
 }
 .industries .swiper .card_img .card_content p {
   color: #fff;
   font-size: 0.9rem;
+  font-weight: 300;
 }
 .industries .swiper-slide {
   display: flex;
@@ -994,6 +1031,7 @@ body.modal-open .mm-slideout {
 .dark_web {
   background-color: #111163;
   padding: 100px 0 120px 0;
+  padding-bottom: 20px;
   position: relative;
 }
 .dark_web .fortify_svg {
@@ -1032,7 +1070,6 @@ body.modal-open .mm-slideout {
 .custom_footer {
   background-color: rgb(17, 17, 99);
   padding: 100px 0;
-  padding-top: 0;
 }
 .custom_footer .footer_logo img {
   margin-bottom: 15px;
@@ -1048,6 +1085,29 @@ body.modal-open .mm-slideout {
   border: 1px solid #fff;
   border-radius: 5px;
   margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+.custom_footer .footer_logo ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.custom_footer .footer_logo ul li img {
+  margin-bottom: 0 !important;
+  width: 60%;
+  margin: auto;
+  margin-top: -2px;
+}
+.custom_footer .footer_logo ul li:hover {
+  background-color: #2b4fc9;
 }
 .custom_footer .footer_links h5 {
   color: #fff;
@@ -1081,6 +1141,7 @@ body.modal-open .mm-slideout {
   background-color: #fff;
   border-radius: 24px;
   width: 500px;
+  max-width: 100%;
   position: relative;
 }
 .custom_footer .news_letter .form_group button {
@@ -1105,4 +1166,175 @@ body.modal-open .mm-slideout {
   border-radius: 24px;
 }
 
-/* Shared styles  *//*# sourceMappingURL=style.css.map */
+@media (max-width: 1600px) {
+  html {
+    font-size: 14px;
+  }
+  .custom_header .half_circle_header {
+    width: 35%;
+  }
+}
+@media (max-width: 1100px) {
+  .industries .wrapper {
+    padding-left: 0;
+  }
+  .industries .swiper {
+    width: 600px;
+  }
+  .industries .swiper .card_img {
+    height: 500px;
+  }
+  .industries .swiper .card_img .line img {
+    height: 380px;
+  }
+  .custom_footer .news_letter .form_group {
+    height: 65px;
+  }
+  .custom_footer .news_letter .form_group button {
+    width: 113px;
+  }
+  .firtify_your_business .firtify_your_business_content .head {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 991px) {
+  html {
+    font-size: 13px;
+  }
+  .custom_navbar .linkslis,
+  .custom_navbar .get_demo {
+    display: none;
+  }
+  .custom_header .header_content {
+    z-index: 7;
+  }
+  .custom_header .header_img {
+    opacity: 0.4;
+  }
+  .d-none-on-mobile {
+    display: none;
+  }
+  .header_img_on_mobile {
+    display: block !important;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .header_img_on_mobile img {
+    opacity: 0.3;
+  }
+  .custom_header .header_content h5,
+  .our_services .section_header h5,
+  .why_choose_sekurd .section_header h5,
+  .dark_web .dark_web_content h5, .testemonial .section_header h5, .industries .section_header h5 {
+    font-size: 3rem;
+  }
+  .custom_header .header_content h5 {
+    line-height: 50px;
+  }
+  .custom_header {
+    height: 85vh;
+  }
+  .firtify_your_business .firtify_your_business_img .card_img img {
+    width: 100%;
+  }
+  .firtify_your_business .firtify_your_business_img .card_img {
+    height: 500px;
+    margin-bottom: 30px;
+  }
+  .why_choose_sekurd_card {
+    margin-bottom: 30px;
+  }
+  .dont_wait .dont_wait_img {
+    text-align: right;
+  }
+  .dont_wait .dont_wait_img img {
+    width: 60%;
+  }
+  .industries .section_header {
+    margin-bottom: 0;
+  }
+  .dark_web .dark_web_content h5 {
+    margin-bottom: 20px;
+  }
+  .custom_footer .news_letter {
+    padding-left: 0;
+    margin-top: 30px;
+  }
+  .dark_web .dark_web_content h5 br,
+  .firtify_your_business .firtify_your_business_content .head br {
+    display: none;
+  }
+  .industries .swiper .card_img .card_content h5, .industries .swiper .card_img .card_content p {
+    width: 70%;
+  }
+  .industries .swiper .card_img .card_content {
+    padding-left: 20px;
+  }
+  .industries .swiper .card_img .line img {
+    height: 330px;
+  }
+}
+@media (max-width: 600px) {
+  .custom_header {
+    height: 90vh;
+  }
+  .custom_header .half_circle_header {
+    width: 100%;
+  }
+  .custom_header .header_img_on_mobile {
+    z-index: 6;
+  }
+  .firtify_your_business .firtify_your_business_img .card_img {
+    height: 400px;
+  }
+  .why_choose_sekurd_card .card_icon {
+    width: 100px;
+  }
+  .industries .section_header {
+    margin-bottom: 90px;
+  }
+  .custom_footer .footer_links h5 {
+    margin-top: 40px;
+  }
+  .custom_header .header_links .header_links_packaged {
+    margin-top: 20px;
+  }
+  .custom_header .header_content h5 {
+    font-size: 2.2rem;
+    line-height: 40px;
+  }
+  .custom_header .header_content p {
+    font-size: 1.6rem;
+  }
+  .our_services .section_header h5, .pixel_by_pixel .section_header h5, .firtify_your_business .firtify_your_business_content .head, .why_choose_sekurd .section_header h5 {
+    font-size: 2.2rem;
+  }
+  .testemonial {
+    padding-top: 60px;
+  }
+  .order-mobile-second {
+    order: 2;
+  }
+  .order-mobile-first {
+    order: 1;
+  }
+  .our_services .slick-slide {
+    margin: 0 10px;
+  }
+  .industries .swiper .card_img {
+    height: 400px;
+  }
+  .industries .swiper {
+    margin-top: 40px;
+  }
+  .industries .swiper .card_img .card_content h5, .industries .swiper .card_img .card_content p {
+    width: 50%;
+  }
+}
+/* Shared styles  */
+.pixel_by_pixel {
+  background-position: center;
+  background-size: cover;
+}/*# sourceMappingURL=style.css.map */
