--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ body.modal-open .mm-slideout {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #00142c;
+  background-color: #0d0e72;
   z-index: 999999;
   top: 0;
   transition: all 0.3s ease-in-out;
@@ -441,6 +441,12 @@ body.modal-open .mm-slideout {
 }
 .custom_navbar .nav_item:hover::after {
   width: 100%;
+}
+.custom_navbar .nav_item.active::after {
+  width: 100%;
+}
+.custom_navbar .nav_item.active a {
+  color: #5c96db;
 }
 .custom_navbar .get_demo {
   display: flex;
