--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@ html {
 body {
   font-family: "Poppins", serif;
   font-weight: 400;
+  background-color: #111163;
 }
 
 input:focus,
@@ -935,7 +936,7 @@ body.modal-open .mm-slideout {
     position: relative;
     .frame {
       position: absolute;
-      display: none;
+      // display: none;
       top: 50%;
       transform: translate(0, -50%);
       left: 0;
@@ -1194,7 +1195,7 @@ body.modal-open .mm-slideout {
           align-items: center;
           justify-content: center;
           text-align: center;
-          i{
+          i {
             color: #fff;
           }
         }
@@ -1269,6 +1270,112 @@ body.modal-open .mm-slideout {
       height: 100%;
       border-radius: 24px;
     }
+  }
+}
+
+.pricing {
+  position: relative;
+  z-index: 7;
+  .pricing_table_wrapper {
+    background-color: #1429a6;
+    padding: 85px 60px;
+    border-radius: 25px;
+    margin-top: 50px;
+  }
+  table {
+    width: 100%;
+    min-width: 600px;
+    overflow: auto;
+    thead {
+      text-align: center;
+      th {
+        border-bottom: 1px solid #5C96DB;
+        padding: 20px 0;
+        vertical-align: middle;
+        width: calc(100% / 4);
+      }
+      p,
+      span {
+        color: #fff;
+        font-size: 0.9rem;
+        font-weight: 400;
+      }
+      p {
+        font-weight: 500;
+        font-size: 1rem;
+        margin-top: 5px;
+        margin-bottom: 0;
+        span {
+          font-weight: 300;
+          font-size: 0.9rem;
+        }
+      }
+    }
+    tbody {
+      tr {
+        td {
+          text-align: center;
+          border-bottom: 1px solid #5C96DB;
+          padding: 20px 0;
+          vertical-align: middle;
+          width: calc(100% / 4);
+          &:first-child {
+            text-align: left;
+          }
+          p{
+            color: #fff;
+            font-size: 1rem;
+            margin: 0;
+          }
+        }
+        &:last-child{
+          td{
+            border-bottom: 0;
+            p{
+              font-size: .9rem;
+              font-weight: 300;
+              margin: 0;
+            }
+            .recomen{
+              display: flex;
+              align-items: center;
+              background-color: #1AA53D;
+              color: #fff;
+              padding: 11px 7px;
+              border-radius: 5px;
+              width: fit-content;
+              margin: auto;
+              p{
+                font-size: .8rem;
+                font-weight: 300;
+              }
+              img{
+                margin-right: 5px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .section_header {
+    text-align: center;
+    h5 {
+      font-size: 4rem;
+      color: #fff;
+    }
+    p {
+      color: #fff;
+    }
+  }
+  ::-webkit-scrollbar {
+    width: 1px;
+    height: 1px;
+    background-color: $mainColor;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: $secondColor;
   }
 }
 
@@ -1418,6 +1525,9 @@ body.modal-open .mm-slideout {
       }
     }
   }
+  .pricing .pricing_table_wrapper{
+    padding: 80px 20px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -1505,6 +1615,7 @@ body.modal-open .mm-slideout {
       width: 60px;
     }
   }
+
 }
 
 .mm-listitem:after {
